// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@trousers/macro complex theme: complex theme 1`] = `

import { css } from './macro';
css('Button', { color: 'var(--brand-background)' })
  .theme({
    neutral: '#fff',
    brand: {
      forground: 'yellow',
      background: 'green',
    },
  });

      ↓ ↓ ↓ ↓ ↓ ↓

import { css } from '@trousers/macro/runtime';
css('Button', {
    '.Button-2140373281': 'color: var(--brand-background);',
}).theme('', {
    '.theme-Button-3270977004':
        '--neutral: #fff;--brand-forground: yellow;--brand-background: green;',
});


`;

exports[`@trousers/macro correctly interpolates booleans (BooleanLiteral): correctly interpolates booleans (BooleanLiteral) 1`] = `

import { css } from './macro';
css('Button', { color: true });

      ↓ ↓ ↓ ↓ ↓ ↓

import { css } from '@trousers/macro/runtime';
css('Button', {
    '.Button-3336976155': 'color: true;',
});


`;

exports[`@trousers/macro correctly interpolates booleans (NumericLiteral): correctly interpolates booleans (NumericLiteral) 1`] = `

import { css } from './macro';
css('Button', { color: 5 });

      ↓ ↓ ↓ ↓ ↓ ↓

import { css } from '@trousers/macro/runtime';
css('Button', {
    '.Button-1906181116': 'color: 5;',
});


`;

exports[`@trousers/macro correctly updates imports: correctly updates imports 1`] = `

/** @jsx jsx */
import { css, jsx } from './macro';

      ↓ ↓ ↓ ↓ ↓ ↓



`;

exports[`@trousers/macro correctly updates renamed imports: correctly updates renamed imports 1`] = `

/** @jsx bar */
import { css as foo, jsx as bar } from './macro';

      ↓ ↓ ↓ ↓ ↓ ↓



`;

exports[`@trousers/macro different import name: different import name 1`] = `

import { css as foo } from './macro';
foo('Button', { color: 'blue' });

      ↓ ↓ ↓ ↓ ↓ ↓

import { foo } from '@trousers/macro/runtime';
foo('Button', {
    '.Button-2561700995': 'color: blue;',
});


`;

exports[`@trousers/macro element without identifier: element without identifier 1`] = `

import { css } from './macro';
css({ color: 'blue' });

      ↓ ↓ ↓ ↓ ↓ ↓

import { css } from '@trousers/macro/runtime';
css('', {
    '.2561700995': 'color: blue;',
});


`;

exports[`@trousers/macro element: element 1`] = `

import { css } from './macro';
css('Button', { color: 'blue' });

      ↓ ↓ ↓ ↓ ↓ ↓

import { css } from '@trousers/macro/runtime';
css('Button', {
    '.Button-2561700995': 'color: blue;',
});


`;

exports[`@trousers/macro global: global 1`] = `

import { css } from './macro';
css('Button', {})
  .global({
    ':root': {
      'backgroundColor': 'red',
    }
  });

      ↓ ↓ ↓ ↓ ↓ ↓

import { css } from '@trousers/macro/runtime';
css('Button', {}).global('global-Button-480010618', {
    ':root': 'background-color: red;',
});


`;

exports[`@trousers/macro many modifiers: many modifiers 1`] = `

import { css } from './macro';
css('Button', { color: 'blue' })
  .modifier('primary', { color: 'brown' })
  .modifier('secondary', { color: 'purple' })
  .modifier('tertiary', { color: 'yellow' })
  .modifier('quaternary', { color: 'green' });

      ↓ ↓ ↓ ↓ ↓ ↓

import { css } from '@trousers/macro/runtime';
css('Button', {
    '.Button-2561700995': 'color: blue;',
})
    .modifier('primary', {
        '.Button--primary-2270159875': 'color: brown;',
    })
    .modifier('secondary', {
        '.Button--secondary-3026956261': 'color: purple;',
    })
    .modifier('tertiary', {
        '.Button--tertiary-41860765': 'color: yellow;',
    })
    .modifier('quaternary', {
        '.Button--quaternary-2402939536': 'color: green;',
    });


`;

exports[`@trousers/macro modifiers: modifiers 1`] = `

import { css } from './macro';
css('Button', { color: 'blue' })
  .modifier('primary', { color: 'brown' });

      ↓ ↓ ↓ ↓ ↓ ↓

import { css } from '@trousers/macro/runtime';
css('Button', {
    '.Button-2561700995': 'color: blue;',
}).modifier('primary', {
    '.Button--primary-2270159875': 'color: brown;',
});


`;

exports[`@trousers/macro multiple modifiers: multiple modifiers 1`] = `

import { css } from './macro';
css('Button', { color: 'blue' })
  .modifier('primary', { color: 'brown' })
  .modifier('secondary', { color: 'purple' });

      ↓ ↓ ↓ ↓ ↓ ↓

import { css } from '@trousers/macro/runtime';
css('Button', {
    '.Button-2561700995': 'color: blue;',
})
    .modifier('primary', {
        '.Button--primary-2270159875': 'color: brown;',
    })
    .modifier('secondary', {
        '.Button--secondary-3026956261': 'color: purple;',
    });


`;

exports[`@trousers/macro theme: theme 1`] = `

import { css } from './macro';
css('Button', { color: 'var(--brand-background)' })
  .theme({ brand: { background: 'green' }});

      ↓ ↓ ↓ ↓ ↓ ↓

import { css } from '@trousers/macro/runtime';
css('Button', {
    '.Button-2140373281': 'color: var(--brand-background);',
}).theme('', {
    '.theme-Button-1537299292': '--brand-background: green;',
});


`;

exports[`@trousers/macro unused import: unused import 1`] = `

import { css } from './macro';

      ↓ ↓ ↓ ↓ ↓ ↓



`;
